--- a/requirements.txt
+++ b/requirements.txt
@@ -60,3 +60,13 @@ tzlocal==5.3.1
 urllib3==2.4.0
 watchdog==6.0.0
 xyzservices==2025.1.0
+streamlit
+folium
+networkx
+geopy
+SpeechRecognition
+gTTS
+opencv-python-headless
+qrcode
+streamlit-folium
+Pillow
