--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 altair==5.5.0
 attrs==25.3.0
-audioop-lts==0.2.1
+audioop-lts
 beautifulsoup4==4.13.4
 blinker==1.9.0
 branca==0.8.1
@@ -38,6 +38,7 @@ pyjsparser==2.7.1
 PyPrind==2.11.3
 pySmartDL==1.3.4
 python-dateutil==2.9.0.post0
+python
 pytz==2025.2
 qrcode==8.1
 referencing==0.36.2
